encryption algoritms: data is stored encrypted and decrypted locally, decryption information is only visible to users after the hash in the URL (alongside the initialization vector) - yet to ensure plain entry lengths fit within length requirements

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -190,3 +190,7 @@ button {
 		justify-self: right;
 	}
 }
+
+fieldset input {
+	margin: auto;
+}
